KUBERNETES/kubernetes_yml_files/service.yml
<<<<<<< HEAD
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-tutorial-clusterip
spec:
  selector:
    app: kubernetes-tutorial-deployment
  ports:
  - port: 80
    targetPort: 3000
    
=======
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-tutorial-clusterip
spec:
  selector:
    app: kubernetes-tutorial-deployment
  ports:
  - port: 80
    targetPort: 3000
    
>>>>>>> 9fe199743c6df19ba1530059bc0dd794606c74e5
